syntax = "proto3";

package cart;

option go_package = "/cart";

service CartService {
  rpc AddItem (AddItemReq) returns (AddItemResp) {}
  rpc GetCart (GetCartReq) returns (GetCartResp) {}
  rpc EmptyCart (EmptyCartReq) returns (EmptyCartResp) {}
}

message CartItem {
  uint64 spu_id = 1;
  uint64 sku_id = 2;
  uint32 quantity = 3;
}

message AddItemReq {
  uint64 user_id = 1;
  CartItem item = 2;
}

message AddItemResp {}

message GetCartReq {
  uint64 user_id = 1;
}

message GetCartResp {
  Cart cart = 1;
}

message Cart {
  uint64 user_id = 1;
  repeated CartItem items = 2;
}

message EmptyCartReq {
  uint64 user_id = 1;
}

message EmptyCartResp {}