syntax = "proto3";

package product;

option go_package ="/product";

service ProductCatalogService {
  rpc CreateProduct(CreateProductsReq) returns (CreateProductsResp);
  rpc UpdateProduct(UpdateProductsReq) returns (UpdateProductsResp);
  rpc RemoveProduct(RemoveProductsReq) returns (RemoveProductsResp);
  rpc ListProducts(ListProductsReq) returns (ListProductsResp) {} ;
  rpc GetProduct(GetProductReq) returns (GetProductResp) {};
  rpc BatchGetProductsReq (BatchGetProductReq) returns (BatchGetProductResp) {};
  rpc SearchProducts (SearchProductsReq) returns (SearchProductsResp) {} ;
}

message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;

  repeated string categories = 6;
}

message CreateProductsReq {
  Product product = 1;
}

message CreateProductsResp {
  uint32 id = 1;
}

message UpdateProductsReq {
  Product product = 1;
}

message UpdateProductsResp {
  bool success = 1;
}

message RemoveProductsReq {
  uint32 id = 1;
}

message RemoveProductsResp {
  bool success = 1;
}

message ListProductsReq {
  int32 page = 1;
  int32 page_size = 2;
  string category_name = 3;
}

message ListProductsResp {
  repeated Product products = 1;
}

message GetProductReq {
  uint32 id = 1;
}

message GetProductResp {
  Product product = 1;
}

message BatchGetProductReq {
  repeated uint32 ids = 1;
}

message BatchGetProductResp {
  repeated Product products = 1;
}

message SearchProductsReq {
  string query = 1;
}

message SearchProductsResp {
  repeated Product results = 1;
}
